--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-**/*.pyc
-**/__pycache__
-/build
-/dist
-/.cache
-/.coverage
-/tests.xml
+build/
+dist/
+homekeeper/__pycache__/
+homekeeper/*.pyc
+htmlcov/
+.cache/
+.coverage
+tests.xml
