--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ install:
   - "pip install ."
   - "pip install -r requirements.txt"
 script:
-  - "pylint -rn homekeeper"
-  - "nosetests"
+  - "make test"
