Adds virtual environment to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
+/assets/
 /bazel-bin
 /bazel-homekeeper
 /bazel-out
 /bazel-testlogs
-
-assets/
-BUILD/
-dist/
-homekeeper/__pycache__/
-homekeeper/*.pyc
-homekeeper.egg-info/
-htmlcov/
-.cache/
-.coverage
-homekeeper.html
-homekeeper-tests.html
+/dist/
+/homekeeper/__pycache__/
+/homekeeper/*.pyc
+/homekeeper.egg-info/
+/htmlcov/
+/venv/
+/.cache/
+/.coverage
+/homekeeper.html
+/homekeeper-tests.html
