Upgraded to Python 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-/assets/
-/bazel-bin
-/bazel-homekeeper
-/bazel-out
-/bazel-testlogs
 /dist/
-/homekeeper/__pycache__/
-/homekeeper/*.pyc
 /homekeeper.egg-info/
-/htmlcov/
 /venv/
-/.cache/
-/.coverage
-/homekeeper.html
-/homekeeper-tests.html
+/.pytest_cache/
+__pycache__
+homekeeper-testlogs.txt
