--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-astroid==1.3.4
-click==6.7
-mock==1.0.1
-pyfakefs==3.2
-pylint==1.2.1
-pytest==3.1.2
-pytest-cov==2.5.1
-pytest-html==1.15.1
+click==7.1.2
+mock==3.0.5
+pyfakefs==4.0.2
+pylint==2.5.3
+pytest==5.4.3
+twine==1.15.0
+wheel==0.34.2
