--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - "3.5.3"
 install:
-  - "pip install -r requirements.txt"
+  - pip install tox-travis
 script:
-  - "make lint test"
+  - tox -e pylint,flake8,check,py35
