Adds test coverage reports using pytest-cov.
Closes #20.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,14 @@ envlist = pylint,flake8,check,py35
 platform = linux|darwin
 deps = -rrequirements.txt
 skip_install = true
-commands = pytest --verbose --color=auto homekeeper
+commands =
+    pytest --verbose --color=auto --cov homekeeper
+    coverage html
+
+[testenv:check]
+envdir = {toxworkdir}/py35
+skip_install = false
+commands = twine check {toxworkdir}/dist/*
 
 [testenv:flake8]
 envdir = {toxworkdir}/py35
@@ -15,11 +22,6 @@ commands = flake8 --extend-ignore=E501 homekeeper setup.py
 [testenv:pylint]
 envdir = {toxworkdir}/py35
 commands = pylint --rcfile=pylintrc homekeeper setup.py
-
-[testenv:check]
-envdir = {toxworkdir}/py35
-skip_install = false
-commands = twine check {toxworkdir}/dist/*
 
 [testenv:publish]
 envdir = {toxworkdir}/py35
