--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ mock==3.0.5
 pyfakefs==4.0.2
 pylint==2.5.3
 pytest==5.4.3
+pytest-cov==2.10.0
 readme-renderer==26.0
 setuptools==49.1.2
 twine==1.15.0
