Alters travis and tox to test against multiple versions of Python.
Closes #21.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 minversion = 3.17.1
-envlist = pylint,flake8,check,py35
+envlist = pylint,flake8,check,py{35,38}
+skip_missing_interpreters = true
 
 [testenv]
 platform = linux|darwin
