--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 python:
-  - "3.5.3"
+  - "3.5"
+  - "3.8"
 install:
   - pip install tox-travis
 script:
-  - tox -e pylint,flake8,check,py35
+  - tox
