--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ pytest==5.4.3
 pytest-cov==2.10.0
 readme-renderer==26.0
 setuptools==49.1.2
+sphinx==3.1.2
+sphinx-rtd-theme==0.5.0
 twine==1.15.0
 wheel==0.34.2
