--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.17.1
-envlist = pylint,flake8,check,py{35,38}
+envlist = pylint,flake8,check,docs,py{35,38}
 skip_missing_interpreters = true
 
 [testenv]
@@ -15,6 +15,11 @@ commands =
 envdir = {toxworkdir}/py35
 skip_install = false
 commands = twine check {toxworkdir}/dist/*
+
+[testenv:docs]
+changedir = docs
+envdir = {toxworkdir}/py35
+commands = sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
 
 [testenv:flake8]
 envdir = {toxworkdir}/py35
