--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ skip_missing_interpreters = true
 platform = linux|darwin
 deps = -rrequirements.txt
 skip_install = true
+wheel = true
 commands =
     pytest --verbose --color=auto --cov homekeeper
     coverage html
