Attempts to test using tox/gh actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,21 @@
 [tox]
 minversion = 3.17.1
-envlist = pylint,flake8,check,docs,py{35,36,37,38}
+envlist = pylint,flake8,check,docs,py{3,37,39}
 skip_missing_interpreters = true
 
+[gh-actions]
+python =
+    3.5: py35
+    3.9: py39
+
+[gh-actions:env]
+PLATFORM =
+    ubuntu-linux: linux
+    macos-latest: macos
+    windows-latest: windows
+
 [testenv]
-platform = linux|darwin
+platform = linux|macos|windows
 deps = -rrequirements.txt
 skip_install = true
 wheel = true
