Fixes envlist with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 minversion = 3.17.1
-envlist = pylint,flake8,check,docs,py{3,37,39}
+envlist = pylint,flake8,check,docs,py{3,37,39}-{linux,macos,windows}
 skip_missing_interpreters = true
 
 [gh-actions]
 python =
-    3.5: py35
+    3.7: py37
     3.9: py39
 
 [gh-actions:env]
@@ -24,24 +24,24 @@ commands =
     coverage html
 
 [testenv:check]
-envdir = {toxworkdir}/py35
+envdir = {toxworkdir}/py3
 skip_install = false
 commands = twine check {toxworkdir}/dist/*
 
 [testenv:docs]
 changedir = docs
-envdir = {toxworkdir}/py35
+envdir = {toxworkdir}/py3
 commands = sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
 
 [testenv:flake8]
-envdir = {toxworkdir}/py35
+envdir = {toxworkdir}/py3
 commands = flake8 --extend-ignore=E501 homekeeper setup.py
 
 [testenv:pylint]
-envdir = {toxworkdir}/py35
+envdir = {toxworkdir}/py3
 commands = pylint --rcfile=pylintrc homekeeper setup.py
 
 [testenv:publish]
-envdir = {toxworkdir}/py35
+envdir = {toxworkdir}/py3
 skip_install = false
 commands = twine upload --repository pypi {toxworkdir}/dist/*
