Fixes multiple runs of different platforms

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.17.1
-envlist = pylint,flake8,check,docs,py{3,37,39}-{linux,macos,windows}
+envlist = pylint,flake8,check,docs,py{37,39}-{linux,macos,windows}
 skip_missing_interpreters = true
 
 [gh-actions]
@@ -15,7 +15,10 @@ PLATFORM =
     windows-latest: windows
 
 [testenv]
-platform = linux|macos|windows
+platform =
+    linux: linux
+    macos: macos
+    windows: windows
 deps = -rrequirements.txt
 skip_install = true
 wheel = true
