Finally fixes logging

--- a/pkg/common/testdata/homekeeper.yml
+++ b/pkg/common/testdata/homekeeper.yml
@@ -1,6 +1,8 @@
 directories:
-- /home/johndoe/dotfiles
-- /home/johndoe/dotfiles2
+- /home/johndoe/d1
+- /home/johndoe/d2
+- /home/johndoe/d3
 ignores:
-- .git
-- README.md
+- file1
+- file2
+- file3
