Fixes workflow to only run on push to main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,9 @@ name: Build and Package
 
 on:
   pull_request:
+    branches: [ main ]
   push:
-    branchs: [ main ]
+    branches: [ main ]
 
 jobs:
   build:
