--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,20 @@ jobs:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup
+        uses: actions/setup-go@v1
         with:
           go-version: 1.16.5
-      - run: make dist
-      - run: make test
+      - name: Format
+        run: make format
+      - name: Build
+        run: make build
+      - name: Test
+        run: make test
+      - name: Integration Test
+        continue-on-error: true
+        run: |
+          ./homekeeper init https://github.com/retiman/dotfiles.git
+          ./homekeeper keep
