--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,21 @@ jobs:
         run: make build
       - name: Test
         run: make test
-      - name: Integration Test
+      - name: Test (Windows)
+        if: ${{ runner.os == 'Windows' }}
+        shell: pwsh
         continue-on-error: true
         run: |
-          ./homekeeper init https://github.com/retiman/dotfiles.git
-          ./homekeeper keep
+          Remove-Item -Recurse -Force ./tmp
+          cd ./tmp
+          ../homekeeper init https://github.com/retiman/dotfiles.git
+          ../homekeeper keep
+      - name: Test (Ubuntu & MacOS)
+        if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
+        shell: bash
+        continue-on-error: true
+        run: |
+          rm -rf ./tmp
+          cd ./tmp
+          ../homekeeper init https://github.com/retiman/dotfiles.git
+          ../homekeeper keep
