--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
         continue-on-error: true
         run: |
           Remove-Item -Recurse -Force ./tmp
+          mkdir ./tmp
           cd ./tmp
           ../homekeeper init https://github.com/retiman/dotfiles.git
           ../homekeeper keep
@@ -40,6 +41,7 @@ jobs:
         continue-on-error: true
         run: |
           rm -rf ./tmp
+          mkdir ./tmp
           cd ./tmp
           ../homekeeper init https://github.com/retiman/dotfiles.git
           ../homekeeper keep
