--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,35 @@ jobs:
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup
+        uses: actions/setup-go@v1
         with:
           go-version: 1.16.5
-      - run: make dist
-      - run: make test
+      - name: Format
+        run: make format
+      - name: Build
+        run: make build
+      - name: Test
+        run: make test
+      - name: Test (Windows)
+        if: ${{ runner.os == 'Windows' }}
+        shell: pwsh
+        continue-on-error: true
+        run: |
+          Remove-Item -Recurse -Force ./tmp
+          mkdir ./tmp
+          cd ./tmp
+          ../homekeeper init --debug https://github.com/retiman/dotfiles.git
+          ../homekeeper keep --debug
+      - name: Test (Ubuntu & MacOS)
+        if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
+        shell: bash
+        continue-on-error: true
+        run: |
+          rm -rf ./tmp
+          mkdir ./tmp
+          cd ./tmp
+          ../homekeeper init --debug https://github.com/retiman/dotfiles.git
+          ../homekeeper keep --debug
