try to debug why dir is empty

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,8 @@ jobs:
           mkdir ./tmp
           cd ./tmp
           ../homekeeper init --debug https://github.com/retiman/dotfiles.git
+          ls ./tmp/dotfiles > output.txt
           ../homekeeper keep --debug
+      - name: Debug
+        uses: actions/upload-artifact@v2
+        path: output.txt
