should still work

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-          cd ${{ runner.temp }} && $GITHUB_WORKSPACE/homekeeper init --debug --git https://github.com/retiman/dotfiles.git
+          cd ${{ runner.temp }}
+          $GITHUB_WORKSPACE/homekeeper init --debug --git https://github.com/retiman/dotfiles.git
           $GITHUB_WORKSPACE/homekeeper keep --debug
-          ls ${{ runner.temp }}/dotfiles > $GITHUB_WORKSPACE/output.txt
       - name: Debug
         uses: actions/upload-artifact@v2
         with:
