Makes it an action instead

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,12 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       - name: Mage Build
-        uses: magefile/mage@v1
+        uses: magefile/mage-action@v1
         with:
           version: ${{ env.MAGE_VERSION }}
           args: build
       - name: Mage Test
-        uses: magefile/mage@v1
+        uses: magefile/mage-action@v1
         with:
           version: ${{ env.MAGE_VERSION }}
           args: test
@@ -47,3 +47,15 @@ jobs:
         run: |
           Copy-Item -Path .\homekeeper.exe -Destination ${{ runner.temp }}
           cd ${{ runner.temp }} && .\homekeeper.exe init --debug --git https://github.com/retiman/dotfiles.git
+      - name: Upload (Ubuntu & MacOS)
+        if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
+        uses: actions/upload-artifact@v2
+        with:
+          retention-days: 1
+          path: homekeeper
+      - name: Upload (Windows)
+        if: ${{ runner.os == 'Windows' }}
+        uses: actions/upload-artifact@v2
+        with:
+          retention-days: 1
+          path: homekeeper.exe
