--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,12 +22,16 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: ${{ env.GO_VERSION }}
+      - name: Install Dependencies
+        run: make deps
+      # There is a golangci-lint action, but using it would make linting locally different from linting on the CI
+      # system.  In addition, using the golangci-lint action times out on GHC Windows agents.
+      - name: Lint
+        run: make lint
       - name: Build
-        run: |
-          make clean
-          make lint
-          make build
-          make test
+        run: make build
+      - name: Test
+        run: make test
       - name: Run (Linux and MacOS)
         if: ${{ runner.os != 'Windows' }}
         shell: bash
