--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,15 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: ${{ env.GO_VERSION }}
+      - name: Deps
+        run: make deps
+      - name: Lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.42.1
+          args: --timeout 5m
       - name: Build
-        run: |
-          make deps
-          make lint
-          make build
+        run: make build
       - name: Test
         run: make test
       - name: Run (Linux and MacOS)
