--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,26 +2,25 @@ name: Build and Package
 
 on:
   pull_request:
-    branches: [ main ]
   push:
-    branches: [ main ]
-
-env:
-  GO_VERSION: 1.16.5
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ${{ matrix.platform }}
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ ubuntu-latest, macos-latest, windows-latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup
-        uses: actions/setup-go@v1
+
+      - name: Setup Go
+        uses: actions/setup-go@v3
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: '>= 1.17.0'
+
       - name: Deps
         run: make deps
       - name: Lint
