--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,17 +21,20 @@ jobs:
         with:
           go-version: '>= 1.17.0'
 
-      - name: Deps
-        run: make deps
+      - name: Install dependencies
+        run: go mod tidy
+
       - name: Lint
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.42.1
-          args: --timeout 5m
+          version: 1.46.1
+
       - name: Build
         run: make build
+
       - name: Test
         run: make test
+
       - name: Run (Linux and MacOS)
         if: ${{ runner.os != 'Windows' }}
         shell: bash
@@ -39,6 +42,7 @@ jobs:
           cp ${{ github.workspace }}/homekeeper ${{ runner.temp }}
           cd ${{ runner.temp }}
           ./homekeeper init --debug --git https://github.com/retiman/dotfiles.git
+
       - name: Run (Windows)
         if: ${{ runner.os == 'Windows' }}
         shell: pwsh
