--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,17 +7,17 @@
     }
   },
   "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
-
   "settings": {
     "go.toolsManagement.checkForUpdates": "local",
     "go.useLanguageServer": true,
     "go.gopath": "/go"
   },
-
   "extensions": [
-    "golang.Go"
+    "EditorConfig.EditorConfig",
+    "Tyriar.windows-terminal",
+    "golang.go",
+    "medo64.render-crlf"
   ],
-
   "postCreateCommand": "go version",
   "remoteUser": "vscode"
 }
