--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,10 @@
 {
   "name": "Go",
   "build": {
+    "context": "..",
     "dockerfile": "Dockerfile",
     "args": {
-      "VARIANT": "1.17-buster",
+      "VARIANT": "1.17-buster"
     }
   },
   "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
