--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           go-version: 1.18
           check-latest: true
 
-      - nane: Setup cache
+      - name: Setup cache
         uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
