--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,25 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: ${{ runner.os }}-go-
 
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '>= 1.18.0'
+
+      - name: Install dependencies
+        run: go mod tidy
+
+      - name: Lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.46.1
+
+      - name: Build
+        run: make build
+
+      - name: Test
+        run: make test
+
       - name: Release
         uses: goreleaser/goreleaser-action@v2
         with:
