--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,6 @@
 {
   "name": "Go",
   "build": {
-    "context": "..",
     "dockerfile": "Dockerfile",
     "args": {
       "VARIANT": "1.18-buster"
@@ -9,9 +8,11 @@
   },
   "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
   "settings": {
+    "go.lintFlags": ["--fast"],
+    "go.lintTool": "golangci-lint",
+    "go.gopath": "/go",
     "go.toolsManagement.checkForUpdates": "local",
     "go.useLanguageServer": true,
-    "go.gopath": "/go"
   },
   "extensions": [
     "EditorConfig.EditorConfig",
