--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,9 @@ jobs:
         with:
           version: v1.46.1
 
+      - name: Check
+        run: make check
+
       - name: Build
         run: make build
 
