no need for workspace

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
         if: ${{ runner.os != 'Windows' }}
         shell: bash
         run: |
-          cp ${{ github.workspace }}/homekeeper ${{ runner.temp }}
+          cp ./homekeeper ${{ runner.temp }}
           cd ${{ runner.temp }}
           ./homekeeper init --debug --git https://github.com/retiman/dotfiles.git
 
@@ -55,6 +55,6 @@ jobs:
         if: ${{ runner.os == 'Windows' }}
         shell: pwsh
         run: |
-          Copy-Item ${{ github.workspace }}\homekeeper.exe ${{ runner.temp }}
+          Copy-Item .\homekeeper.exe ${{ runner.temp }}
           Set-Location ${{ runner.temp }}
           .\homekeeper.exe init --debug --git https://github.com/retiman/dotfiles.git
