--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -9,7 +9,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
