--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: '>= 1.18.0'
+          go-version: 1.20.6
 
       - name: Format
         run: make format
