--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,10 @@ jobs:
     runs-on: ${{ matrix.platform }}
     strategy:
       matrix:
-        platform: [ ubuntu-latest, macos-latest, windows-latest ]
+        platform:
+         - ubuntu-latest
+         - macos-latest
+         - windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
