--- a/.github/workflows/format-code.yml
+++ b/.github/workflows/format-code.yml
@@ -11,11 +11,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-          
+
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: '>= 1.18.0'
+          go-version: 1.20.6
 
       - name: Format
         run: make format
