--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,9 @@ jobs:
     runs-on: ${{ matrix.platform }}
     strategy:
       matrix:
-        platform: [ ubuntu-latest, macos-latest, windows-latest ]
+        platform:
+         - ubuntu-latest
+         - macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -24,7 +26,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: '>= 1.18.0'
+          go-version: 1.20.6
 
       - name: Install dependencies
         run: go mod tidy
@@ -32,7 +34,7 @@ jobs:
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.46.1
+          version: v1.53.3
 
       - name: Build
         run: make build
