--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Release
 
 on:
   pull_request:
+    paths:
+      - .github/workflows/release.yml
   push:
     tags:
       - v*
@@ -9,17 +11,23 @@ on:
 jobs:
   release:
     name: release
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.platform }}
+    strategy:
+      matrix:
+        platform:
+         - ubuntu-latest
+         - macos-latest
+         - windows-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Setup Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.20.6
+          go-version: 1.23.4
           check-latest: true
 
       - name: Setup cache
@@ -33,9 +41,9 @@ jobs:
         run: go mod tidy
 
       - name: Lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.53.3
+          version: v1.60
 
       - name: Build
         run: make build
@@ -43,7 +51,24 @@ jobs:
       - name: Test
         run: make test
 
+      - name: Run (Linux and MacOS)
+        if: ${{ runner.os != 'Windows' }}
+        shell: bash
+        run: |
+          cp ./homekeeper ${{ runner.temp }}
+          cd ${{ runner.temp }}
+          ./homekeeper init --debug --git https://github.com/retiman/dotfiles.git
+
+      - name: Run (Windows)
+        if: ${{ runner.os == 'Windows' }}
+        shell: pwsh
+        run: |
+          Copy-Item .\homekeeper.exe ${{ runner.temp }}
+          Set-Location ${{ runner.temp }}
+          .\homekeeper.exe init --debug --git https://github.com/retiman/dotfiles.git
+
       - name: Release
+        if: ${{ runner.os == 'Linux' }}
         uses: goreleaser/goreleaser-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
